<?xml version="1.0"?>
<!--package format="2"-->
<package>
    <name>gp_interface</name>
    <version>0.0.0</version>
    <description>The gp_interface package</description>

    <maintainer email="malyn16@student.sdu.dk">Mathias A. Lyngbye</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>tf</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nav_core plugin="${prefix}/gp_interface_plugin.xml" />
    </export>
</package>
